# uoj_thuoop

judge_client/1/uoj_judger/: CMakeLists.txt  main_judger.cpp
judge_client/1/uoj_judger/include/: uoj_judger.h
judge_client/1/uoj_judger/run/: run_program.cpp
uoj/.svn/: wc.db
uoj/1/: index.php
uoj/1/app/: route.php
uoj/1/app/controllers/: group_manage.php  problem_managers_manage.php  user_info.php
uoj/1/var/www/uoj/var/www/uoj/var/www/uoj/: index.php
